Fixed layout issues

--- a/property_management/properties/static/properties/css/bootstrap.css
+++ b/property_management/properties/static/properties/css/bootstrap.css
@@ -6433,3 +6433,22 @@ a.bg-danger:hover {
     min-height: 100%;
     overflow: hidden; 
 }
+
+/* Custom */
+
+.img-container {
+    position:relative;
+    padding-top:66.59%;
+}
+
+img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.row {
+  margin-bottom: 1rem;
+}
